[tool.poetry]
name = "tmo"
version = "0.1.0"
description = ""
authors = ["Brendan Cazier <520246+cazier@users.noreply.github.com>"]
packages = [ { include = "tmo" } ]

[tool.poetry.scripts]
tmo = "tmo.main:app"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
fastapi = "^0.111.0"
psycopg = "^3.1.18"
typer = "^0.12.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
pre-commit = "^3.7.0"
rich = "^13.7.1"
watchfiles = "^0.21.0"
pygments = "^2.17.2"
shandy-sqlfmt = "^0.21.3"
faker = "^25.0.1"

[tool.poetry.group.linters.dependencies]
types-pygments = "^2.17.0.20240310"
mypy = "^1.10.0"
pylint = "^3.1.0"
ruff = "^0.4.3"
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.group.load.dependencies]
openpyxl = "^3.1.2"

[tool.poetry.group.testing.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.0"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
explicit_package_bases = true

[tool.pylint."BASIC"]
allowed-redefined-builtins = [
    "id",
]

good-names = [
    "_Base_Model",
    "_Subscriber_Bill_Link",
]

[tool.pylint."FORMAT"]
max-line-length = 120
disable = [
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
]
