[project]
name = "tmo"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Brendan Cazier", email = "520246+cazier@users.noreply.github.com"}]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "psycopg[binary]>=3.2.3",
    "sqlmodel>=0.0.22",
    "typer>=0.12.5",
    "uvicorn>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmo"]

[project.scripts]
tmo = "tmo.main:app"

[project.optional-dependencies]
pretty = [
    "pygments>=2.18.0",
    "shandy-sqlfmt>=0.23.2",
]
load = [
    "openpyxl>=3.1.5",
]
testing = [
    "coverage>=7.6.1",
    "pytest>=8.3.3",
]


[tool.uv]
dev-dependencies = [
    "faker>=30.1.0",
    "ipython>=8.28.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pdbr>=0.8.9",
    "pre-commit>=3.8.0",
    "pygments>=2.18.0",
    "rich>=13.9.2",
    "ruff>=0.6.9",
    "shandy-sqlfmt>=0.23.2",
    "types-pygments>=2.18.0.20240506",
    "watchfiles>=0.24.0",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
  "utilities/*"
]

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
strict = true
explicit_package_bases = true
