[project]
name = "tmo"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Brendan Cazier", email = "520246+cazier@users.noreply.github.com"}]
dependencies = [
    "arrow>=1.3.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "playwright>=1.49.1",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlmodel>=0.0.22",
    "typer>=0.12.5",
    "uvicorn>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmo"]

[project.scripts]
tmo = "tmo.main:app"

[project.optional-dependencies]
pretty = [
    "pygments>=2.18.0",
    "shandy-sqlfmt>=0.23.2",
]
load = [
    "openpyxl>=3.1.5",
]
testing = [
    "coverage>=7.6.1",
    "pytest>=8.3.3",
]


[tool.uv]
dev-dependencies = [
    "coverage==7.6.9",
    "faker>=30.1.0",
    "ipython>=8.28.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pdbr>=0.8.9",
    "pre-commit>=3.8.0",
    "pygments>=2.18.0",
    "rich>=13.9.2",
    "ruff>=0.6.9",
    "shandy-sqlfmt>=0.23.2",
    "time-machine>=2.16.0",
    "types-pygments>=2.18.0.20240506",
    "watchfiles>=0.24.0",
]

# FORMATTING
[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

# LINTING
[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
    "^tmo/db/api\\.py$",
    "^tmo/frontend/filters\\.py",
    "^tmo/frontend/pages\\.py",
]

# TESTING
[tool.pytest.ini_options]
addopts = "-s"
console_output_style = "progress-even-when-capture-no"

[tool.coverage.run]
omit = [
  "utilities/*",
  "tests/*",
  "tmo/frontend/templates/*"
]
